Update Navbar: Add 1.png logo and white text

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,10 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="logo">SOLVE-A-THON <span>1.0</span></div>
+        <div class="logo">
+            <img src="elements/1.png" alt="Logo" class="nav-logo-img">
+            <span>SOLVE-A-THON 1.0</span>
+        </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
