Remove logo image from navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="logo">
-            <span>SOLVE-A-THON 1.0</span>
+            <img src="elements/collegelogo.png" alt="SIT Logo" class="nav-logo-img">
         </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
