--- a/frontend/index.html
+++ b/frontend/index.html
@@ -162,7 +162,7 @@
                                 declare the event open.</p>
                         </div>
                         <div class="timeline-time">
-                            <span>Feb 18<br>09:00 AM</span>
+                            <span>Feb 18 <br> 09:00 AM</span>
                         </div>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                                 innovation, and prototyping begins now.</p>
                         </div>
                         <div class="timeline-time">
-                            <span>Feb 18<br>10:00 AM</span>
+                            <span>Feb 18 <br> 10:00 AM</span>
                         </div>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                                 to refine solutions.</p>
                         </div>
                         <div class="timeline-time">
-                            <span>Feb 18<br>04:00 PM</span>
+                            <span>Feb 18 <br> 04:00 PM</span>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                                 uploaded.</p>
                         </div>
                         <div class="timeline-time">
-                            <span>Feb 19<br>10:00 AM</span>
+                            <span>Feb 19 <br> 10:00 AM</span>
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                             </p>
                         </div>
                         <div class="timeline-time">
-                            <span>Feb 19<br>02:00 PM</span>
+                            <span>Feb 19 <br> 02:00 PM</span>
                         </div>
                     </div>
                 </div>
@@ -352,8 +352,49 @@
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2026 Solve-A-Thon 1.0 | Department of MCA, SIT</p>
+    <footer id="footer">
+        <div class="footer-container">
+            <div class="footer-row">
+                <!-- Social Connect -->
+                <div class="footer-col">
+                    <h4>Connect With Launchpad</h4>
+                    <p class="social-text">Stay updated with mission status and intel.</p>
+                    <div class="social-icons-row">
+                        <a href="https://www.instagram.com/mcaflix?igsh=MXF5bWdoOHNtd2F5Nw==" target="_blank"
+                            class="social-icon-link"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/sit.samagra.gnana" target="_blank" class="social-icon-link"><i
+                                class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.linkedin.com/school/sitmangalore/" target="_blank"
+                            class="social-icon-link"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="http://www.youtube.com/@sitmangalore" target="_blank" class="social-icon-link"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+
+                <!-- Map Location -->
+                <div class="footer-col">
+                    <h4>Base Location</h4>
+                    <div class="map-container">
+                        <iframe
+                            src="https://maps.google.com/maps?q=Srinivas+Institute+of+Technology+Valachil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                            width="100%" height="150" style="border:0; border-radius: 8px;" allowfullscreen=""
+                            loading="lazy">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Developer Credit -->
+            <div class="footer-bottom">
+                <p>&copy; 2026 Solve-A-Thon 1.0 | Department of MCA, SIT</p>
+                <div class="developer-credit">
+                    <span>Constructed by </span>
+                    <a href="https://www.linkedin.com/in/vishakh-k-t-0105bb2ba/" target="_blank" class="dev-link">
+                        Vishakh K T <i class="fa-solid fa-code"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
