Update logo to text-icon style, revamp footer with 3-col layout, add contact cards and enhance mobile responsiveness

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,9 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="logo">
-            <img src="elements/collegelogo.png" alt="SIT Logo" class="nav-logo-img">
+            <a href="#home" class="logo-text">
+                SOLVEATHON 1.0 <i class="fa-solid fa-jet-fighter-up"></i>
+            </a>
         </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
@@ -316,45 +318,90 @@
                 <div class="team-card glass-panel">
                     <h3>Mr. Rajesh Naik</h3>
                     <p>Staff Coordinator</p>
+                    <a href="tel:+919480046998"
+                        style="color: #ccc; margin-top: 5px; display: block; text-decoration: none;"><i
+                            class="fa-solid fa-phone" style="color: var(--primary-color);"></i> +91 94800 46998</a>
                 </div>
                 <div class="team-card glass-panel">
                     <h3>Mr. Chinthan Rai</h3>
                     <p>Student Coordinator</p>
+                    <a href="tel:+919740832951"
+                        style="color: #ccc; margin-top: 5px; display: block; text-decoration: none;"><i
+                            class="fa-solid fa-phone" style="color: var(--primary-color);"></i> +91 97408 32951</a>
+                </div>
+            </div>
+
+            <!-- Student Coordinators / Queries -->
+            <h3 class="section-subtitle">For More Queries</h3>
+            <div class="query-grid">
+                <!-- Roshni -->
+                <div class="query-card glass-panel">
+                    <h4>Roshni Bhagath</h4>
+                    <p class="role">Registration Head</p>
+                    <div class="contact-row">
+                        <a href="tel:+919483643437"><i class="fa-solid fa-phone"></i> +91 94836 43437</a>
+                    </div>
+                    <div class="contact-row icon-only">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                </div>
+
+                <!-- Nishmitha -->
+                <div class="query-card glass-panel">
+                    <h4>Nishmitha</h4>
+                    <p class="role">Coordinator</p>
+                    <div class="contact-row">
+                        <a href="tel:+917022430899"><i class="fa-solid fa-phone"></i> +91 70224 30899</a>
+                    </div>
+                    <div class="contact-row icon-only">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                </div>
+
+                <!-- Vishakh -->
+                <div class="query-card glass-panel">
+                    <h4>Vishakh</h4>
+                    <p class="role">Coordinator</p>
+                    <div class="contact-row">
+                        <a href="tel:+918296398814"><i class="fa-solid fa-phone"></i> +91 82963 98814</a>
+                    </div>
+                    <div class="contact-row icon-only">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                </div>
+
+                <!-- Saniha -->
+                <div class="query-card glass-panel">
+                    <h4>Saniha</h4>
+                    <p class="role">Coordinator</p>
+                    <div class="contact-row">
+                        <a href="tel:+919611873675"><i class="fa-solid fa-phone"></i> +91 96118 73675</a>
+                    </div>
+                    <div class="contact-row icon-only">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <h2 class="section-title">Establish Contact</h2>
-            <div class="contact-wrapper glass-panel">
-                <div class="contact-info">
-                    <div class="info-item">
-                        <i class="fa-solid fa-phone"></i>
-                        <p>0824-2274730, 2274732</p>
-                    </div>
-                    <div class="info-item">
-                        <i class="fa-solid fa-envelope"></i>
-                        <p>principal@sitmng.ac.in</p>
-                    </div>
-                    <div class="info-item">
-                        <i class="fa-solid fa-globe"></i>
-                        <p>sitmng.ac.in</p>
-                    </div>
-                    <div class="info-item">
-                        <i class="fa-solid fa-map-location-dot"></i>
-                        <p>Valachil, Post Farangipete, Mangalore - 574143</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <footer id="footer">
         <div class="footer-container">
+            <h2 class="footer-main-title">Establish Contact</h2>
+
             <div class="footer-row">
+                <!-- Institution Details -->
+                <div class="footer-col">
+                    <h4 style="line-height: 1.4;">SRINIVAS INSTITUTE OF TECHNOLOGY</h4>
+                    <div class="college-details" style="color: #ccc; font-size: 0.95rem; line-height: 1.6;">
+                        <p style="margin-bottom: 0.5rem; font-weight: bold;">A. SHAMA RAO FOUNDATION</p>
+                        <p style="margin-bottom: 0.5rem;">MANGALURU 574143, KARNATAKA</p>
+                        <p style="font-size: 0.8rem; opacity: 0.8;">(NAAC ACCREDITED, AFFILIATED TO VTU, BELGAVI AND
+                            RECOGNIZED BY THE AICTE, NEW DELHI)</p>
+                    </div>
+                </div>
+
                 <!-- Social Connect -->
                 <div class="footer-col">
                     <h4>Connect With Launchpad</h4>
@@ -377,7 +424,7 @@
                     <div class="map-container">
                         <iframe
                             src="https://maps.google.com/maps?q=Srinivas+Institute+of+Technology+Valachil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                            width="100%" height="150" style="border:0; border-radius: 8px;" allowfullscreen=""
+                            width="100%" height="180" style="border:0; border-radius: 8px;" allowfullscreen=""
                             loading="lazy">
                         </iframe>
                     </div>
