--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="elements/favicon.jpg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Model Viewer Script -->
@@ -74,7 +75,7 @@
 
             <div class="cta-buttons">
                 <a href="#" class="btn primary-btn glow-effect">Register Mission</a>
-                <a href="brochure/brochure.pdf" target="_blank" class="btn secondary-btn">Mission Brief</a>
+                <a href="brochure/Solveathon1.0.pdf" target="_blank" class="btn secondary-btn">Mission Brief</a>
             </div>
         </div>
 
@@ -83,9 +84,9 @@
         <div class="model-container">
             <model-viewer src="3D/combat_jet_animation.glb" alt="Combat Jet Animation" auto-rotate camera-controls
                 camera-target="0m 5m 0m" camera-orbit="30deg 75deg 60m" min-camera-orbit="auto auto 60m"
-                max-camera-orbit="auto auto 60m" shadow-intensity="2" autoplay exposure="1" shadow-softness="1"
+                max-camera-orbit="auto auto 60m" shadow-intensity="1" autoplay exposure="1" shadow-softness="0"
                 environment-image="neutral" field-of-view="25deg" interaction-prompt="none" disable-pan
-                style="width: 100%; height: 100%;">
+                rotation-per-second="30deg" render-scale="0.9" style="width: 100%; height: 100%;">
             </model-viewer>
         </div>
 
