Update registration links to correct KonfHub URL

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
             <li><a href="#events">Events</a></li>
             <li><a href="#rules">Details</a></li>
             <!-- Renamed Rules to Details generally matches better, or keep Rules if preferred. User said remove team/contact -->
-            <li><a href="https://konfhub.com/Solveathon1" target="_blank" class="nav-btn">Register Now</a></li>
+            <li><a href="https://konfhub.com/solveathon1" target="_blank" class="nav-btn">Register Now</a></li>
         </ul>
         <div class="hamburger">
             <span class="bar"></span>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="cta-buttons">
-                <a href="https://konfhub.com/solvethon" target="_blank" class="btn primary-btn glow-effect">Register
+                <a href="https://konfhub.com/solveathon1" target="_blank" class="btn primary-btn glow-effect">Register
                     Mission</a>
                 <a href="brochure/Solveathon1.0.pdf" download class="btn secondary-btn">Mission Brief</a>
             </div>
