Update registration links to correct KonfHub URL

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,7 +76,7 @@
             <div class="cta-buttons">
                 <a href="https://konfhub.com/solveathon1" target="_blank" class="btn primary-btn glow-effect">Register
                     Mission</a>
-                <a href="brochure/Solveathon1.0.pdf" download class="btn secondary-btn">Mission Brief</a>
+                <a href="brochure/solveathon1.0.pdf" download class="btn secondary-btn">Mission Brief</a>
             </div>
         </div>
 
@@ -260,12 +260,28 @@
                     <div class="card-bg" style="background-image: url('elements/4.png');"></div>
                     <div class="card-content centered-content">
                         <h3>Registration Fee</h3>
-                        <div class="price-tag">
-                            <span class="currency">₹</span>
-                            <span class="amount">500</span>
+
+                        <div style="margin-bottom: 10px;">
+                            <h4 style="color: #fff; font-size: 1.1rem; margin-bottom: 5px;">BCA / BSc Students</h4>
+                            <div class="price-tag" style="font-size: 2rem; margin: 5px 0;">
+                                <span class="amount">FREE</span>
+                            </div>
+                            <p class="per-team" style="font-size: 0.8rem; margin-bottom: 0;">No Entry Fee</p>
                         </div>
-                        <p class="per-team">Per Team</p>
-                        <a href="#" class="btn primary-btn pulse-btn">Register Mission</a>
+
+                        <div style="width: 60%; height: 1px; background: rgba(255,255,255,0.2); margin: 10px auto;">
+                        </div>
+
+                        <div style="margin-bottom: 20px;">
+                            <h4 style="color: #fff; font-size: 1.1rem; margin-bottom: 5px;">MCA / MSc / BE Students</h4>
+                            <div class="price-tag" style="font-size: 2rem; margin: 5px 0;">
+                                <span class="currency">₹</span>
+                                <span class="amount">500</span>
+                            </div>
+                            <p class="per-team" style="font-size: 0.8rem; margin-bottom: 0;">Per Team</p>
+                        </div>
+                        <a href="https://konfhub.com/solveathon1" target="_blank"
+                            class="btn primary-btn pulse-btn">Register Mission</a>
                     </div>
                 </div>
 
