Create dedicated registration page for UG/PG separation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
             <li><a href="#events">Events</a></li>
             <li><a href="#rules">Details</a></li>
             <!-- Renamed Rules to Details generally matches better, or keep Rules if preferred. User said remove team/contact -->
-            <li><a href="https://konfhub.com/solveathon1" target="_blank" class="nav-btn">Register Now</a></li>
+            <li><a href="register.html" class="nav-btn">Register Now</a></li>
         </ul>
         <div class="hamburger">
             <span class="bar"></span>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="cta-buttons">
-                <a href="https://konfhub.com/solveathon1" target="_blank" class="btn primary-btn glow-effect">Register
+                <a href="register.html" class="btn primary-btn glow-effect">Register
                     Mission</a>
                 <a href="brochure/solveathon1.0.pdf" download class="btn secondary-btn">Mission Brief</a>
             </div>
@@ -280,8 +280,7 @@
                             </div>
                             <p class="per-team" style="font-size: 0.8rem; margin-bottom: 0;">Per Team</p>
                         </div>
-                        <a href="https://konfhub.com/solveathon1" target="_blank"
-                            class="btn primary-btn pulse-btn">Register Mission</a>
+                        <a href="register.html" class="btn primary-btn pulse-btn">Register Mission</a>
                     </div>
                 </div>
 
