Standardize button text to Join Mission and update registration form

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
             <li><a href="#events">Events</a></li>
             <li><a href="#rules">Details</a></li>
             <!-- Renamed Rules to Details generally matches better, or keep Rules if preferred. User said remove team/contact -->
-            <li><a href="register.html" class="nav-btn">Register Now</a></li>
+            <li><a href="register.html" class="nav-btn">Join Mission</a></li>
         </ul>
         <div class="hamburger">
             <span class="bar"></span>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="cta-buttons">
-                <a href="register.html" class="btn primary-btn glow-effect">Register
+                <a href="register.html" class="btn primary-btn glow-effect">Join
                     Mission</a>
                 <a href="brochure/solveathon1.0.pdf" download class="btn secondary-btn">Mission Brief</a>
             </div>
@@ -280,14 +280,14 @@
                             </div>
                             <p class="per-team" style="font-size: 0.8rem; margin-bottom: 0;">Per Team</p>
                         </div>
-                        <a href="register.html" class="btn primary-btn pulse-btn">Register Mission</a>
+                        <a href="register.html" class="btn primary-btn pulse-btn">Join Mission</a>
                     </div>
                 </div>
 
                 <!-- Cash Prizes Card -->
                 <div class="prize-card glass-panel rewards-card">
-                    <div class="card-bg" style="background-image: url('elements/5.png');"></div>
-                    <div class="card-content">
+                    <div class="card-bg" style="background-image: url('elements/5.png');</div>
+                    <div class=" card-content">
                         <h3>Cash Prizes</h3>
                         <div class="prize-list">
                             <div class="prize-category">
