--- a/frontend/register.html
+++ b/frontend/register.html
@@ -74,7 +74,7 @@
                         <li><i class="fa-solid fa-check"></i> Certifications & Swags</li>
                     </ul>
                     <button class="btn primary-btn full-width-btn" onclick="showForm()">
-                        Initiate Registration
+                        Join Mission
                     </button>
                 </div>
 
@@ -94,7 +94,7 @@
                         <li><i class="fa-solid fa-check"></i> Cash Pool Rewards</li>
                     </ul>
                     <a href="https://konfhub.com/solveathon1" target="_blank" class="btn primary-btn full-width-btn">
-                        Proceed to KonfHub
+                        Join Mission
                     </a>
                 </div>
 
@@ -111,18 +111,20 @@
 
                     <!-- Team Intel -->
                     <div class="form-section">
-                        <h4><i class="fa-solid fa-users-viewfinder"></i> Team Intel</h4>
-                        <div class="input-group">
-                            <label>Team Name</label>
-                            <input type="text" placeholder="Enter Squadron Name" required>
-                        </div>
-                        <div class="input-group">
-                            <label>College Name</label>
-                            <input type="text" placeholder="Base of Operations" required>
+                        <h4><i class="fa-solid fa-users-viewfinder"></i> Squadron Details</h4>
+                        <div class="grid-2">
+                            <div class="input-group">
+                                <label>College Name</label>
+                                <input type="text" placeholder="Enter College Name" required>
+                            </div>
+                            <div class="input-group">
+                                <label>Team Name</label>
+                                <input type="text" placeholder="Enter Team Name" required>
+                            </div>
                         </div>
                     </div>
 
-                    <!-- Leader Intel -->
+                    <!-- Team Leader -->
                     <div class="form-section">
                         <h4><i class="fa-solid fa-user-astronaut"></i> Team Leader (Member 1)</h4>
                         <div class="grid-2">
@@ -131,43 +133,59 @@
                                 <input type="text" placeholder="Leader Name" required>
                             </div>
                             <div class="input-group">
-                                <label>USN / Reg No</label>
-                                <input type="text" placeholder="ID Number" required>
-                            </div>
-                        </div>
-                        <div class="grid-2">
-                            <div class="input-group">
-                                <label>Email Comms</label>
-                                <input type="email" placeholder="email@address.com" required>
-                            </div>
-                            <div class="input-group">
-                                <label>Contact Frequency</label>
+                                <label>Contact Number</label>
                                 <input type="tel" placeholder="+91 XXXXX XXXXX" required>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Members -->
+                    <!-- Member 2 -->
                     <div class="form-section">
-                        <h4><i class="fa-solid fa-users"></i> Squadron Members</h4>
-                        <div class="grid-3">
+                        <h4><i class="fa-solid fa-user"></i> Member 2</h4>
+                        <div class="grid-2">
                             <div class="input-group">
-                                <label>Member 2 Name</label>
-                                <input type="text" placeholder="Name" required>
+                                <label>Full Name</label>
+                                <input type="text" placeholder="Member Name" required>
                             </div>
                             <div class="input-group">
-                                <label>Member 3 Name</label>
-                                <input type="text" placeholder="Name" required>
+                                <label>Contact Number</label>
+                                <input type="tel" placeholder="+91 XXXXX XXXXX" required>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Member 3 -->
+                    <div class="form-section">
+                        <h4><i class="fa-solid fa-user"></i> Member 3</h4>
+                        <div class="grid-2">
+                            <div class="input-group">
+                                <label>Full Name</label>
+                                <input type="text" placeholder="Member Name" required>
                             </div>
                             <div class="input-group">
-                                <label>Member 4 Name</label>
-                                <input type="text" placeholder="Name" required>
+                                <label>Contact Number</label>
+                                <input type="tel" placeholder="+91 XXXXX XXXXX" required>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Member 4 -->
+                    <div class="form-section">
+                        <h4><i class="fa-solid fa-user"></i> Member 4</h4>
+                        <div class="grid-2">
+                            <div class="input-group">
+                                <label>Full Name</label>
+                                <input type="text" placeholder="Member Name" required>
+                            </div>
+                            <div class="input-group">
+                                <label>Contact Number</label>
+                                <input type="tel" placeholder="+91 XXXXX XXXXX" required>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-actions">
-                        <button type="submit" class="btn primary-btn glow-effect">Transmit Data</button>
+                        <button type="submit" class="btn primary-btn glow-effect">Confirm & Join Mission</button>
                     </div>
 
                 </form>
