Enhance register page: Add footer, widen cards, improve spacing

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -200,10 +200,62 @@
         </div>
     </section>
 
+    <!-- Contact Section -->
     <footer id="footer">
-        <!-- Reusing Footer from index for consistency -->
         <div class="footer-container">
-            <p style="text-align: center; color: #888;">&copy; 2026 Solve-A-Thon 1.0 | Mission Control</p>
+            <h2 class="footer-main-title">Establish Contact</h2>
+
+            <div class="footer-row">
+                <!-- Institution Details -->
+                <div class="footer-col">
+                    <h4 style="line-height: 1.4;">SRINIVAS INSTITUTE OF TECHNOLOGY</h4>
+                    <div class="college-details" style="color: #ccc; font-size: 0.95rem; line-height: 1.6;">
+                        <p style="margin-bottom: 0.5rem; font-weight: bold;">A. SHAMA RAO FOUNDATION</p>
+                        <p style="margin-bottom: 0.5rem;">MANGALURU 574143, KARNATAKA</p>
+                        <p style="font-size: 0.8rem; opacity: 0.8;">(NAAC ACCREDITED, AFFILIATED TO VTU, BELGAVI AND
+                            RECOGNIZED BY THE AICTE, NEW DELHI)</p>
+                    </div>
+                </div>
+
+                <!-- Social Connect -->
+                <div class="footer-col">
+                    <h4>Connect With Launchpad</h4>
+                    <p class="social-text">Stay updated with mission status and intel.</p>
+                    <div class="social-icons-row">
+                        <a href="https://www.instagram.com/mcaflix?igsh=MXF5bWdoOHNtd2F5Nw==" target="_blank"
+                            class="social-icon-link"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/sit.samagra.gnana" target="_blank" class="social-icon-link"><i
+                                class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.linkedin.com/school/sitmangalore/" target="_blank"
+                            class="social-icon-link"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="http://www.youtube.com/@sitmangalore" target="_blank" class="social-icon-link"><i
+                                class="fa-brands fa-youtube"></i></a>
+                    </div>
+                </div>
+
+                <!-- Map Location -->
+                <div class="footer-col">
+                    <h4>Base Location</h4>
+                    <div class="map-container">
+                        <iframe
+                            src="https://maps.google.com/maps?q=Srinivas+Institute+of+Technology+Valachil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                            width="100%" height="180" style="border:0; border-radius: 8px;" allowfullscreen=""
+                            loading="lazy">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Developer Credit -->
+            <div class="footer-bottom">
+                <p>&copy; 2026 Solve-A-Thon 1.0 | Department of MCA, SIT</p>
+                <div class="developer-credit">
+                    <span>Constructed by </span>
+                    <a href="https://www.linkedin.com/in/vishakh-k-t-0105bb2ba/" target="_blank" class="dev-link">
+                        Vishakh K T <i class="fa-solid fa-code"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
 
