Fix index page syntax error and darken rewards background

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -286,8 +286,8 @@
 
                 <!-- Cash Prizes Card -->
                 <div class="prize-card glass-panel rewards-card">
-                    <div class="card-bg" style="background-image: url('elements/5.png');</div>
-                    <div class=" card-content">
+                    <div class="card-bg" style="background-image: url('elements/5.png');"></div>
+                    <div class="card-content">
                         <h3>Cash Prizes</h3>
                         <div class="prize-list">
                             <div class="prize-category">
